--- a/constructor/www/index.html
+++ b/constructor/www/index.html
@@ -26,9 +26,7 @@
     <hr/>
 
     <ul>
-        <li>
-            <a href="/post_03_01_2021.html">Яма Нияма (йога).</a>
-        </li>
+        
         <li>
             <a href="/post_23_12_2020.html">Мир між людьми. Які в цьому запоруки. Як вирішувати конфліктні ситуації. Теорія і практика.</a>
         </li>
@@ -42,10 +40,13 @@
             <a href="/post_27_12_2020.html">Монахи та ченці.</a>
         </li>
         <li>
-            <a href="/post_29_12_2020.html">Лихварство.</a>
+            <a href="/post_29_12_2020.html">Лихварство (ріба).</a>
         </li>
         <li>
             <a href="/post_25_12_2020-3.html">Коран. Переклад смислів українською мовою. Михайло Якубович.</a>
+        </li>
+        <li>
+            <a href="/post_03_01_2021.html">Яма Нияма (йога).</a>
         </li>
     </ul>
 
