--- a/constructor/www/post_29_12_2020.html
+++ b/constructor/www/post_29_12_2020.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <META http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Лихварство.</title>
+    <title>Лихварство (ріба).</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css"><script src="bootstrap/jquery.min.js"></script><script src="bootstrap/popper.min.js"></script><script src="bootstrap/bootstrap.min.js"></script><script data-ad-client="ca-pub-8744330757055064" async="async" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><script async="async" src="https://www.googletagmanager.com/gtag/js?id=G-FQGF7F91SM"></script><script>
@@ -24,15 +24,65 @@
       <div class="row">
     <div class="col-sm-3">
        <div class="card">
-          <img class="card-img-top" src="img/" alt="">
+          <img class="card-img-top" src="img/dollers.jpg" alt="">
        </div>
        <p></p>
     </div>
     <div class="col-sm-6">
 
-<h1>Лихварство.</h1>
+<h1>Лихварство (ріба).</h1>
 
-<p>стаття готується</p>
+<p>
+Основа ріба – це прибуток від позики.
+</p>
+
+<h4>Цитати з Корану</h4>
+
+<p><mark>
+  Цитати взяті з книжки - "Коран. Переклад смислів українською мовою" Михайло Якубович.<br/>
+  Книжку можна читати онлайн на сайті <a href="https://umma.in.ua/ua/node/1750">Духовне управління мусульман України “Умма”</a>, <br/>
+  також можна читати онлайн на сайті <a href="https://quran.com.ua/meal/yakubovich">Коран онлайн - quran.com.ua</a>
+</mark>
+</p>
+
+<div class="card bg-light text-dark">
+    <div class="card-body">
+       275. А ті, які пожирають лихву, воскреснуть лише так, як ті, кого своїм дотиком вразив шайтан. 
+       Це так, адже вони казали: «Торгівля схожа на лихварство!» 
+       Та Аллаг дозволив торгівлю, але заборонив лихварство. 
+       А якщо хтось після того, як прийшло до нього повчання від Господа, припинить займатися цим, 
+       то буде прощено йому те, що вже минуло, і справа його належить Аллагу! 
+       А якщо хто знову почне займатися цим, то житлом таких буде вогонь. 
+       І будуть вони там довіку! <br/><br/>
+       276. Аллаг знищує лихварство і примножує милостиню. Аллаг не любить кожного невіруючого та грішника! <br/><br/>
+       277. Воістину, ті, які увірували, творили добрі справи, звершували молитву і давали закят, матимуть винагороду у Господа їхнього. 
+       Немає страху їм, і не будуть засмучені вони! <br/><br/>
+       278. О ви, які увірували! Бійтесь Аллага і відмовтесь від того, що належить вам як лихва — якщо віруючі ви! <br/><br/>
+       279. Якщо ж ви не зробите цього, то ви будете ворогами Аллагу та Посланцю Його. А якщо зробите, то матимете свій перший статок. 
+       Не вчиняйте несправедливо і тоді не вчинять несправедливості з вами.<br/><br/>
+       <hr/>
+       Сура 2: Аль-Бакара (Корова)
+    </div>
+</div>
+
+<br/>
+
+<p>
+Насправді, ріба заборонено не тільки в ісламі, але і у всіх попередніх божественних релігіях. 
+Така постанова, однак, була змінена після численних спотворень, які закралися до релігійних текстів інших релігій. 
+Змінено було багато інших постанов. 
+Аллах згадує, що Він покарав людей Писання, адже “Вони займалися лихварством, хоча їм було заборонено це”.
+</p>
+
+<div class="card bg-light text-dark">
+    <div class="card-body">
+       161. Вони займалися лихварством, хоча їм було заборонено це, 
+       а також без права пожирали майно людей. Невіруючим з-посеред них Ми приготували болісну кару!
+       <hr/>
+       Сура 4: Ан-Ніса (Жінки)
+    </div>
+</div>
+
 
 <br/>
 <br/>
