--- a/constructor/www/index.html
+++ b/constructor/www/index.html
@@ -48,6 +48,11 @@
         <li>
             <a href="/post_03_01_2021.html">Яма Нияма (йога).</a>
         </li>
+        <li>
+            <a href="/post_06_02_2021.html">Авторська сторінка поезії ієрм. Самуїла Мосціпана та молитви на оздоровлення 
+            на різні потреби</a>
+        </li>
+        
     </ul>
 
 <br/>
