--- a/constructor/www/post_26_12_2020-2.html
+++ b/constructor/www/post_26_12_2020-2.html
@@ -32,6 +32,20 @@
 
 <h1>Мир між людьми. Азартні ігри.</h1>
 
+<p>
+    Азартні ігри викликають залежність. 
+    Людина в азарті перестає мислити реалістично. 
+    Це може призвести до значних фінансових втрат, втрати здоров'я, душевного спокою і т.д.
+    Через патологічну залежність від азартних ігор руйнуються сім'ї, люди втрачають роботу, навіть життя.
+    Шкода від залежності від азартних ігор дуже і дуже велика.
+</p>
+
+<p>
+    В азартні ігри краще не грати взагалі. Навіть ігри в карти, можуть призвести до залежності. 
+    Цього бажано уникати. Це марна трата дорогоцінного часу, який можна потрати на вивчення чогось нового. 
+    Прочитати якусь книгу наприклад.
+<p>
+
 <h4>Цитати з Корану</h4>
 
 <p><mark>
