--- a/constructor/www/programing.html
+++ b/constructor/www/programing.html
@@ -70,6 +70,9 @@
         <li>
             <a href="/post_31_12_2020-9.html">Обмін з програмою через файлову систему | 1C 7.7</a>
         </li>
+        <li>
+            <a href="/post_05_02_2021.html">Тестове завдання на знання SQL | PostgreSQL</a>
+        </li>
     </ul>
 
     <br/>
