--- a/constructor/html/index.html
+++ b/constructor/html/index.html
@@ -20,6 +20,10 @@
             <a href="/post_29_12_2020.html">Лихварство (ріба).</a>
         </li>
         <li>
+            <a href="/post_23_02_2021.html">Здоров'я.</a>
+        </li>
+
+        <li>
             <a href="/post_25_12_2020-3.html">Коран. Переклад смислів українською мовою. Михайло Якубович.</a>
         </li>
         <li>
