--- a/constructor/www/post_03_01_2021.html
+++ b/constructor/www/post_03_01_2021.html
@@ -24,7 +24,7 @@
       <div class="row">
     <div class="col-sm-3">
        <div class="card">
-          <img class="card-img-top" src="img/" alt="">
+          <img class="card-img-top" src="img/sistema_sutil_kundalini.gif" alt="">
        </div>
     </div>
     <div class="col-sm-6">
